--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -18,11 +18,13 @@ dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
+file.reference.sqljdbc4.jar=E:\\APTECH\\sqljdbc4.jar
 j2ee.platform=1.5
 j2ee.server.type=Tomcat60
 jar.compress=false
 javac.classpath=\
-    ${libs.struts.classpath}
+    ${libs.struts.classpath}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
